--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                      <footer> </footer>
 
            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
-           <script src="C:\Users\Himmat\Desktop\portfolio\js\js_main.js" type="text/javascript">
+           <script src="js\js_main.js" type="text/javascript">
 
            </script> 
     </body> 
